--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,131 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --bg-color: #fefefe;
+  --section-color: #eef2f5;
+  --hover-color: #a1e5d2;
+  --mute-text-color: #98a7bb;
+  --second-text-color: #17bd86;
+}
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--section-color);
 }
+
+/* start <Navbar> */
+#nav {
+  background-color: var(--bg-color);
+  box-shadow: -1px 2px 2px 0px var(--hover-color);
+  z-index: 1000000;
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+
+#nav .logo h1 {
+  font-size: 2rem;
+  color: var(--second-text-color);
+  font-weight: bolder;
+  margin: 0;
+}
+
+#nav .menu li {
+  margin: 0 30px;
+  color: var(--second-text-color);
+  font-size: 1.3rem;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: all 0.5s linear;
+  padding: 5px 20px;
+}
+/* End <Navbar/> */
+
+/* Start <Header/> */
+.head {
+  background-image: url("/public/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 200px 200px 200px 200px inset #00000033;
+  min-height: 40vh;
+}
+
+.head .data-time h2 {
+  margin: 0;
+  font-size: 4rem;
+  font-weight: 500;
+  color: var(--section-color);
+}
+
+.head .data-time p {
+  color: var(--mute-text-color);
+  margin: 0;
+  font-size: 17px;
+  font-weight: 700;
+}
+
+.head .option .time {
+  border: 2px solid var(--second-text-color);
+  border-radius: 10px;
+  box-shadow: 0px 1px 5px #efefef8a;
+  margin-bottom: 10px;
+}
+
+.head .option .time h3 {
+  margin: 0;
+  font-weight: 900;
+  color: var(--bg-color);
+  font-size: 2rem;
+}
+
+.head .option .time p {
+  margin: 0;
+  padding: 10px 0px;
+  color: var(--bg-color);
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
+.head .option .city {
+  color: var(--second-text-color);
+  padding: 10px;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+/* End <Header/> */
+
+/* Start <Content/> */
+.content .inner {
+  background: var(--bg-color);
+  border-radius: 10px;
+  overflow: hidden;
+  height: 200px;
+}
+
+.content .inner .name {
+  color: var(--bg-color);
+  background-color: var(--second-text-color);
+  padding: 10px;
+  font-weight: 900;
+  font-size: 1.8rem;
+}
+
+.content .inner .time {
+  margin: 10px 0;
+  padding: 20px;
+  font-size: 4.5rem;
+  font-weight: 500;
+  color: var(--second-text-color);
+  display: block;
+}
+/* End <Content/> */
